--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "@types/node": "^20.6.5",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
