--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.18",
-    "@types/node": "^20.6.5",
+    "@types/node": "^20.8.3",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/sequelize": "^4.28.16",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.1",
+    "sequelize": "^6.33.0",
+    "sequelize-typescript": "^2.1.5"
   }
 }
